# TempEngine

./: .gitattributes  .gitignore  .gitmodules  CMakeLists.txt  LICENSE.txt  README.md  build.sh
Template/Components/: GameComponentType.hpp  GameDrawable.hpp
Template/Editor/: GameEditor.hpp
Template/Entity/: GameEntityType.hpp
Template/LevelSerializer/: GameLevelSerializer.hpp
Template/Render/: GameShader.hpp
src/: Apple.cmake  Game.cmake
src/Engine/: CMakeLists.txt  Camera.cpp  Camera.hpp  Coordinator.cpp  Coordinator.hpp  Engine.cmake  Engine.cpp  Engine.hpp  EnginePCH.hpp  EngineUtils.cpp  EngineUtils.hpp  Event.cpp  Event.hpp  FontLoader.cpp  FontLoader.hpp  Input.cpp  Input.hpp  LICENSE.txt  Logger.cpp  Logger.hpp  Math.cpp  Math.hpp  Math_fwd.hpp  Math_impl.hpp  STD.cpp  STD.hpp  STDPCH.hpp  SaveSerializer.hpp  TGA.hpp  ThreadPool.cpp  ThreadPool.hpp  UT_Common.hpp
src/Engine/Assets/Images/: ground.tga  surpriseface.tga
src/Engine/Assets/Levels/: Test.level
src/Engine/Assets/LuaScripts/: Test.lua
src/Engine/Assets/Shaders/: Common.glsl  EditorGrid.glsl  Hoverable.glsl  Sprite.glsl  Test.glsl  Text.glsl
src/Engine/Audio/: AudioSystem.cpp  AudioSystem.hpp
src/Engine/Components/: Component.hpp  ComponentContainer.cpp  ComponentContainer.hpp  ComponentData.hpp  ComponentType.hpp  Drawable.cpp  Drawable.hpp  Hoverable.cpp  Hoverable.hpp  Luable.cpp  Luable.hpp  Updateable.cpp  Updateable.hpp
src/Engine/Dependencies/stbimage/: stb_image.h
src/Engine/Editor/: Editor.cpp  Editor.hpp  EditorEntry.hpp  EditorLevel.cpp  EditorLevel.hpp
src/Engine/Entity/: EditorGrid.cpp  EditorGrid.hpp  Entity.hpp  EntityCommon.hpp  EntityData.cpp  EntityData.hpp  EntityManager.cpp  EntityManager.hpp  EntityType.hpp  Null.hpp  Player.hpp  Sprite.cpp  Sprite.hpp  TextBox.cpp  TextBox.hpp  TextButton.cpp  TextButton.hpp
src/Engine/LevelSerializer/: LevelSerializer.cpp  LevelSerializer.hpp
src/Engine/Memory/: Array.cpp  Array.hpp  Array_fwd.hpp  Array_impl.hpp  FileSystem.hpp  FileWriter.hpp  HashMap.hpp  LinearAllocator.hpp  MemoryManager.hpp  MemoryUtils.hpp  Queue.hpp  Stream.hpp  String.hpp
src/Engine/Particle/: ParticleSystem.cpp  ParticleSystem.hpp
src/Engine/Render/: RenderUtils.hpp  Shader.cpp  Shader.hpp
src/Engine/Render/OpenGL/: CommonRender.cpp  CommonRender.hpp  NSRender.hpp  NSRender.mm  OpenGLWrapper.cpp  OpenGLWrapper.hpp  WinRender.cpp  WinRender.hpp  X11Render.cpp  X11Render.hpp  imgui_impl_x11.cpp  imgui_impl_x11.hpp
src/Engine/Scene/: Scene.cpp  Scene.hpp  SceneObject.cpp  SceneObject.hpp
src/UT_Engine/: CMakeLists.txt  UT_ComponentContainer.hpp  UT_ComponentData.hpp  UT_Coordinator.hpp  UT_Entity.hpp  UT_Event.hpp  UT_Hoverable.hpp  UT_LevelSerializer.hpp  UT_Luable.hpp  UT_Main.cpp  UT_Math.hpp  UT_Scene.hpp  UT_ThreadPool.hpp
src/UT_Engine/Components/: GameComponentType.hpp  GameDrawable.hpp
src/UT_Engine/Editor/: GameEditor.hpp
src/UT_Engine/Entity/: GameEntityType.hpp
src/UT_Engine/LevelSerializer/: GameLevelSerializer.hpp
src/UT_Engine/Render/: GameShader.hpp
